--- a/package.json
+++ b/package.json
@@ -3,21 +3,27 @@
   "module": "src/index.ts",
   "type": "module",
   "scripts": {
-    "start": "bun run src/index.ts",
-    "dev": "bun run --hot src/index.ts"
+    "start": "bun run src/index.tsx",
+    "dev": "bun run --hot src/index.tsx"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^18.3.0",
+    "prisma": "^5.22.0"
   },
   "peerDependencies": {
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "@prisma/client": "^5.22.0",
     "@types/node": "^22.7.5",
-    "@types/react": "^18.3.11",
+    "@types/react": "^17.0.0",
     "@types/uuid": "^10.0.0",
     "hono": "^4.6.3",
     "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "sqlite": "^5.1.1",
     "uuid": "^10.0.0"
   },
   "compilerOptions": {
